--- a/text_anchorInner.html
+++ b/text_anchorInner.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>HTML TEXT Basic Page</title>
+	<title> HTML TEXT Basic Page</title>
 </head>
 <body>
-	<a href="http://www.hanbit.co.kr">한빛미디어</a><br>
-	<a href="http://www.naver.com/">네이버</a><br>
-	<a href="http://www.daum.net/">다음</a><br>
+	<a href="#alpha">Alpha 부분</a>
+	<a href="#beta">Beta 부분</a>
+	<a href="#gamma">Gamma 부분</a>
+	<hr>
+	<h1 id="alpha">Alpha</h1>
+	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+	<h1 id="beta">Beta</h1>
+	<p>Vivamus elementum pretium tortor, in tincidunt mauris gravida et.</p>
+	<h1 id="gamma">Gamma</h1>
+	<p>Phase sem tortor, volutpat euismod eget, sagittis sed</p>
 </body>
 </html>
